--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html class="no-js" lang="en">
 
   
-<!-- Mirrored from mixdesign.club/themeforest/unio/index-countdown-full-video-youtube.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 03 Aug 2021 04:17:19 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Unio - Coming Soon & Landing Page Template</title>
+    <title>Effervescence'21</title>
 
     <!-- Meta Tags-->
-    <meta name="description" content="Unio - colorful and stylish coming soon & landing page template to kick-start your new project">
-    <meta name="keywords" content="unio, coming soon, under construction, template, landing page, portfolio, one page, html5, css3, creative, clean, agency, personal page">
-    <meta name="author" content="mix_design">
+    <meta name="description" content="Effervescence'21 - The Cultural Fest of IIIT Allahabad">
+    <meta name="keywords" content="effe, effervescence, 2021, iiit, iiita, iiit allahabad, cultural fest, fest, cultural, mood indigo, effe21, antarangini, rendezvous">
+    <meta name="author" content="Effervescence'21">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,8 +39,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="300">
     <meta property="og:image:width" content="573">
-    <meta property="og:title" content="Unio - Coming Soon & Landing Page Template">
-    <meta property="og:description" content="Unio - colorful and stylish coming soon & landing page template to kick-start your new project">
+    <meta property="og:title" content="Effervescence'21">
+    <meta property="og:description" content="Effervescence'21 - The Cultural Fest of IIIT Allahabad">
     <meta property="og:url" content="index.html">
     <meta property="og:image" content="img/favicon/og-image.jpg">
     <!-- Facebook Metadata End -->
@@ -78,7 +77,7 @@
         <div class="loader-content">
           <div class="loader-logo fadeIn">
             <!-- Your Logo Here -->
-            <img src="img/unio-logo-loader.svg" alt="Unio - Coming Soon & Landing Page Template">
+            <img src="img/effe/images/logo-loader.png" alt="Effervescence'21 - The Cultural Fest of IIIT Allahabad">
           </div>
         </div>
       </div>
@@ -92,7 +91,7 @@
       <!-- Logo Start -->
       <div class="logo">
         <!-- Your Logo Here -->
-        <img src="img/unio-logo.svg" alt="Unio - Coming Soon & Landing Page Template">
+        <img src="img/effe/images/logo.png" alt="Effervescence'21 - The Cultural Fest of IIIT Allahabad">
       </div>
       <!-- Logo End -->
 
@@ -106,13 +105,16 @@
       <div class="socials socials-desktop">
         <ul>
           <li>
-            <a href="https://www.facebook.com/" target="_blank">Fb</a>
+            <a href="https://www.facebook.com/effervescence.iiita/" target="_blank">FB</a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target="_blank">In</a>
+            <a href="https://www.instagram.com/goeffervescence/" target="_blank">IN</a>
           </li>
           <li>
-            <a href="https://twitter.com/" target="_blank">Tw</a>
+            <a href="https://www.youtube.com/user/effervescenceMM13" target="_blank">YT</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/goeffervescence" target="_blank">TW</a>
           </li>
         </ul>
       </div>
@@ -686,8 +688,8 @@
                       <!-- Write a Line Form Start -->
                       <form class="form writealine-form form-light" id="writealine-form">
                         <!-- Hidden Required Fields -->
-                        <input type="hidden" name="project_name" value="Unio - Coming Soon & Landing Page Template">
-                        <input type="hidden" name="admin_email" value="support@mixdesign.club">
+                        <input type="hidden" name="project_name" value="Effervescence'21 - The Cultural Fest of IIIT Allahabad">
+                        <input type="hidden" name="admin_email" value="effervescence@iiita.ac.in">
                         <input type="hidden" name="form_subject" value="Write a Line Form Message">
                         <!-- END Hidden Required Fields-->
                         <input class="input-1" type="text" name="Name" placeholder="Your Name*" required>
