--- a/index.html
+++ b/index.html
@@ -213,12 +213,11 @@
                 <div id="headline" class="headline">
                   <!-- Animated Headline Start -->
                   <h1 class="headline__title animated-headline">
-                    The <span class="gradient-text">new start</span><br>
+                    <span class="gradient-text">Effervescence'21</span><br>
                     is
                     <span id="typed-strings">
-                      <b>modern</b>
-                      <b>unique</b>
                       <b>coming</b>
+                      <b>loading</b>
                     </span>
                     <span id="typed"></span>
                   </h1>
@@ -317,10 +316,8 @@
 
                 <!-- Background Effect Start -->
                 <div class="video-background">
-                  <video id="main-video" preload="auto" autoplay="true" loop="true" muted="muted" poster="img/backgrounds/bg-main-1.jpg">
-                    <source type="video/mp4" src="video/video-1.mp4">
-                    <source type="video/webm" src="video/video-1.webm">
-                    <source type="video/ogv" src="video/video-1.ogv">
+                  <video id="main-video" preload="auto" autoplay="true" loop="true" muted="muted" poster="img/backgrounds/bg-main-1.jpg" style="object-fit: cover;">
+                    <source type="video/mp4" src="video/effe/final.mp4">
                   </video>
                 </div>
                 <!-- Background Effect End -->
