menuImages, socialIcons and map updated

--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
     <meta name="msapplication-navbutton-color" content="#fc466b" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#fc466b" />
     <!-- Custom Browser Color End-->
+
+    <!-- font awesome cdn starts  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- font awesome cdn ends  -->
   </head>
 
   <body>
@@ -180,23 +191,25 @@
             <a
               href="https://www.facebook.com/effervescence.iiita/"
               target="_blank"
-              >FB</a
-            >
+              ><i class="fab fa-facebook"></i
+            ></a>
           </li>
           <li>
             <a href="https://www.instagram.com/goeffervescence/" target="_blank"
-              >IN</a
-            >
+              ><i class="fab fa-instagram"></i
+            ></a>
           </li>
           <li>
             <a
               href="https://www.youtube.com/user/effervescenceMM13"
               target="_blank"
-              >YT</a
-            >
+              ><i class="fab fa-youtube"></i
+            ></a>
           </li>
           <li>
-            <a href="https://twitter.com/goeffervescence" target="_blank">TW</a>
+            <a href="https://twitter.com/goeffervescence" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
           </li>
         </ul>
       </div>
@@ -461,13 +474,30 @@
             <div class="socials socials-mobile">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/" target="_blank">Fb</a>
+                  <a
+                    href="https://www.facebook.com/effervescence.iiita/"
+                    target="_blank"
+                    ><i class="fab fa-facebook"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/" target="_blank">In</a>
+                  <a
+                    href="https://www.instagram.com/goeffervescence/"
+                    target="_blank"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/" target="_blank">Tw</a>
+                  <a
+                    href="https://www.youtube.com/user/effervescenceMM13"
+                    target="_blank"
+                    ><i class="fab fa-youtube"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/goeffervescence" target="_blank"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
                 </li>
               </ul>
             </div>
@@ -1030,12 +1060,9 @@
               <!-- Section Content Block Title Start -->
               <div class="content-block">
                 <span class="subtitle">Contact</span>
-                <h2>Welcome to our new office</h2>
+                <h2>Contact to our new office</h2>
                 <p class="section-text">
-                  Our website is under construction but we are ready to go! You
-                  can call us or leave a request here. We are always glad to see
-                  you in our office from <span>9:00</span> to
-                  <span>18:00</span>.
+                  Drop us a mail if you have any issues or queries.
                 </p>
               </div>
               <!-- Section Content Block Title End -->
@@ -1048,8 +1075,8 @@
                     <div class="col-12 col-sm-6 contact-data__item">
                       <h5>Location</h5>
                       <p>
-                        11 West 53 Street
-                        <br />New York, NY <br />10019
+                        Room no. 1306 Admin Extension 1
+                        <br />IIIT Allahabad <br />Prayagraj, U.P.
                       </p>
                     </div>
                     <!-- Contact data single item -->
@@ -1057,17 +1084,23 @@
                       <h5>Follow us</h5>
                       <ul>
                         <li>
-                          <a href="https://www.facebook.com/" target="_blank"
+                          <a
+                            href="https://www.facebook.com/effervescence.iiita/"
+                            target="_blank"
                             >Facebook</a
                           >
                         </li>
                         <li>
-                          <a href="https://www.instagram.com/" target="_blank"
+                          <a
+                            href="https://www.instagram.com/goeffervescence/"
+                            target="_blank"
                             >Instagram</a
                           >
                         </li>
                         <li>
-                          <a href="https://twitter.com/" target="_blank"
+                          <a
+                            href="https://twitter.com/goeffervescence"
+                            target="_blank"
                             >Twitter</a
                           >
                         </li>
@@ -1079,7 +1112,9 @@
                     <div class="col-12 col-sm-6 contact-data__item">
                       <h5>Phone</h5>
                       <p>
-                        <a href="tel:+12127089400">+1 212-708-9400</a>
+                        <a href="tel:+91 9589321296"
+                          >Yash Mishra: +91 9589321296</a
+                        >
                       </p>
                     </div>
                     <!-- Contact data single item -->
@@ -1087,8 +1122,8 @@
                       <h5>Email</h5>
                       <p>
                         <a
-                          href="mailto:example@example.com?subject=Message%20from%20your%20site"
-                          >example@example.com</a
+                          href="mailto:effervescence@iiita.ac.in?subject=Message%20from%20your%20site"
+                          >effervescence@iiita.ac.in</a
                         >
                       </p>
                     </div>
@@ -1098,7 +1133,7 @@
               <!-- Section Content Block - Contact Data - End -->
 
               <!-- Section Content Block Contact Buttons Start -->
-              <div class="content-block contact-buttons">
+              <!-- <div class="content-block contact-buttons">
                 <a
                   href="#"
                   id="writealine-trigger"
@@ -1108,7 +1143,7 @@
                   <span class="btn-hover"></span>
                   <span class="btn-caption">Say Hello!</span>
                 </a>
-              </div>
+              </div> -->
               <!-- Section Content Block Contact Buttons End -->
             </div>
 
@@ -1215,21 +1250,17 @@
           <div class="col-12 col-xl-6 content-section__media">
             <div class="media-container">
               <!-- Google Map Start -->
-              <div class="map">
-                <div id="google-map">
-                  <div id="google-container"></div>
-                  <div id="zoom-in">
-                    <span class="btn-border"></span>
-                    <span class="btn-hover"></span>
-                    <span class="btn-icon fas fa-plus"></span>
-                  </div>
-                  <div id="zoom-out">
-                    <span class="btn-border"></span>
-                    <span class="btn-hover"></span>
-                    <span class="btn-icon fas fa-minus"></span>
-                  </div>
-                </div>
+              <div class="google-map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10507.746529072223!2d81.76257677350216!3d25.428815802750645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399acac768944451%3A0x1f0c03a031f74c3f!2sIndian%20Institute%20of%20Information%20Technology%20Allahabad!5e0!3m2!1sen!2sin!4v1627998484493!5m2!1sen!2sin"
+                  width="100%"
+                  height="100%"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                ></iframe>
               </div>
+
               <!-- Google Map End -->
             </div>
           </div>
@@ -1322,7 +1353,11 @@
     <script src="js/libs.min.js"></script>
     <script src="js/gallery-init.js"></script>
     <script src="js/unio-custom.js"></script>
-    <script src="js/maps/google-map.js"></script>
+    <!-- <script src="js/maps/google-map.js"></script> -->
+    <script
+      type="text/javascript"
+      src="https://embedmaps.com/google-maps-authorization/script.js?id=ee7d99a57cb84bf41300b1506a6024cc18941596"
+    ></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzp2JuNLNAX0b0LL-MinLjicuHJ7czm-w"></script>
     <!-- Load Scripts End-->
   </body>
