Contact page updated

--- a/index.html
+++ b/index.html
@@ -1059,8 +1059,8 @@
             <div class="blocks-container">
               <!-- Section Content Block Title Start -->
               <div class="content-block">
-                <span class="subtitle">Contact</span>
-                <h2>Contact to our new office</h2>
+                <!-- <span class="subtitle">Contact</span> -->
+                <h2>Contact Us</h2>
                 <p class="section-text">
                   Drop us a mail if you have any issues or queries.
                 </p>
@@ -1354,11 +1354,11 @@
     <script src="js/gallery-init.js"></script>
     <script src="js/unio-custom.js"></script>
     <!-- <script src="js/maps/google-map.js"></script> -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://embedmaps.com/google-maps-authorization/script.js?id=ee7d99a57cb84bf41300b1506a6024cc18941596"
-    ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzp2JuNLNAX0b0LL-MinLjicuHJ7czm-w"></script>
+    ></script> -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzp2JuNLNAX0b0LL-MinLjicuHJ7czm-w"></script> -->
     <!-- Load Scripts End-->
   </body>
 
