update images, fixes

--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                   </h1>
                   <!-- Animated Headline End -->
                   <p class="headline__text">
-                    Our website is under construction, but we are ready to go!
+                    Effervescence'21, the Cultural Fest of IIITA, is back with a bang!
                     We are preparing something amazing and exciting for you.
-                    Special surprise for our subscribers only.
                   </p>
                   <div class="headline__btnholder">
+                    <!--
                     <a
                       href="#"
                       id="notify-trigger"
@@ -329,8 +329,9 @@
                     >
                       <span class="btn-border"></span>
                       <span class="btn-hover"></span>
-                      <!-- <span class="btn-caption">Notify me</span> -->
+                       <span class="btn-caption">Notify me</span> 
                     </a>
+                    -->
                     <a
                       href="#"
                       id="explore-trigger"
