--- a/index.html
+++ b/index.html
@@ -317,8 +317,9 @@
                   </h1>
                   <!-- Animated Headline End -->
                   <p class="headline__text">
-                    Effervescence'21, the Cultural Fest of IIITA, is back with a bang!
-                    We are preparing something amazing and exciting for you.
+                    Effervescence'21, the Cultural Fest of IIITA, is back with a
+                    bang! We are preparing something amazing and exciting for
+                    you.
                   </p>
                   <div class="headline__btnholder">
                     <!--
@@ -823,14 +824,24 @@
             <div class="blocks-container">
               <!-- Section Content Block Title Start -->
               <div class="content-block">
-                <span class="subtitle">Portfolio</span>
-                <h2>Featured projects</h2>
+                <!-- <span class="subtitle">our Past Sponsors</span>  -->
+                <h2>Past Sponsor</h2>
                 <p class="section-text">
-                  Be what you would seem to be – or, if you’d like it put more
-                  simply – never imagine yourself not to be otherwise than what
-                  it might appear to others that what you were or might have
-                  been was not otherwise than what you had been would have
-                  appeared to them to be otherwise.
+                  Interested in sponsoring Effervescence'21 ?
+                  <br />
+                  Have a look at our Sponsorship Brochure
+                  <br />
+                  <br />
+                  <br />
+                  <a
+                    href="./brochure/Marketing.pdf"
+                    id="explore-trigger"
+                    class="btn btn-l btn-outline"
+                  >
+                    <span class="btn-border"></span>
+                    <span class="btn-hover"></span>
+                    <span class="btn-caption">Here</span>
+                  </a>
                 </p>
               </div>
               <!-- Section Content Block Title End -->
@@ -838,214 +849,30 @@
               <!-- Section Content Block Features Start -->
               <div class="content-block features">
                 <div class="container-fluid">
-                  <div class="row">
-                    <!-- Feature single item -->
-                    <div class="col-12 col-sm-6 features__item">
-                      <img
-                        src="img/icons/feature-icon-1.svg"
-                        alt="Unio Template Feature"
-                      />
-                      <h4>Eye catching<br />design</h4>
-                    </div>
-                    <!-- Feature single item -->
-                    <div class="col-12 col-sm-6 features__item">
-                      <img
-                        src="img/icons/feature-icon-2.svg"
-                        alt="Unio Template Feature"
-                      />
-                      <h4>Trendy colors<br />and fonts</h4>
-                    </div>
-                    <!-- Feature single item -->
-                    <div class="col-12 col-sm-6 features__item">
-                      <img
-                        src="img/icons/feature-icon-3.svg"
-                        alt="Unio Template Feature"
-                      />
-                      <h4>Custom<br />Google Map</h4>
-                    </div>
-                    <!-- Feature single item -->
-                    <div class="col-12 col-sm-6 features__item">
-                      <img
-                        src="img/icons/feature-icon-4.svg"
-                        alt="Unio Template Feature"
-                      />
-                      <h4>Ready-to-use<br />contact form</h4>
-                    </div>
-                  </div>
+                  <div class="row"></div>
                 </div>
               </div>
+
               <!-- Section Content Block Features End -->
             </div>
           </div>
-          <!-- Portfolio Section Info End -->
+          <!-- sponsors section starts  -->
+          <div class="sponsors-container">
+            <div class="sponsor-card poweredBy">
+              <img src="./img/sponsors/mtv.jpg" />
+              <br />
+              <span class="sponsor-name"> MTV Beats</span>
 
-          <!-- Portfolio Section Media Start -->
-          <div class="col-12 col-xl-6 content-section__media">
-            <div class="media-container">
-              <!-- Works Gallery Start -->
-              <div class="gallery">
-                <div
-                  class="row no-gutters my-gallery"
-                  itemscope
-                  itemtype="http://schema.org/ImageGallery"
-                >
-                  <!-- Works Gallery Single Item Start -->
-                  <figure
-                    class="col-12 col-sm-6"
-                    itemprop="associatedMedia"
-                    itemscope
-                    itemtype="http://schema.org/ImageObject"
-                  >
-                    <a
-                      href="img/portfolio/portfolio-1.jpg"
-                      data-image="img/portfolio/portfolio-1.jpg"
-                      class="works-link"
-                      itemprop="contentUrl"
-                      data-size="900x1200"
-                    >
-                      <img
-                        src="img/portfolio/portfolio-1.jpg"
-                        class="works-image"
-                        itemprop="thumbnail"
-                        alt="Image description"
-                      />
-                    </a>
-                    <figcaption
-                      class="works-description"
-                      itemprop="caption description"
-                    >
-                      <h3>
-                        Mobile app
-                        <small>Creative</small>
-                      </h3>
-                      <p>
-                        Mauris porttitor lobortis ligula, quis molestie lorem
-                        scelerisque eu. Morbi aliquam enim odio, a mollis ipsum
-                        tristique eu.
-                      </p>
-                    </figcaption>
-                  </figure>
-                  <!-- Works Gallery Single Item End -->
-
-                  <!-- Works Gallery Single Item Start -->
-                  <figure
-                    class="col-12 col-sm-6"
-                    itemprop="associatedMedia"
-                    itemscope
-                    itemtype="http://schema.org/ImageObject"
-                  >
-                    <a
-                      href="img/portfolio/portfolio-2.jpg"
-                      class="works-link"
-                      data-image="img/portfolio/portfolio-2.jpg"
-                      itemprop="contentUrl"
-                      data-size="900x1200"
-                    >
-                      <img
-                        src="img/portfolio/portfolio-2.jpg"
-                        class="works-image"
-                        itemprop="thumbnail"
-                        alt="Image description"
-                      />
-                    </a>
-                    <figcaption
-                      class="works-description"
-                      itemprop="caption description"
-                    >
-                      <h3>
-                        Urban landscape
-                        <small>Photography, illustration</small>
-                      </h3>
-                      <p>
-                        Mauris porttitor lobortis ligula, quis molestie lorem
-                        scelerisque eu.
-                      </p>
-                    </figcaption>
-                  </figure>
-                  <!-- Works Gallery Single Item End -->
-
-                  <!-- Works Gallery Single Item Start -->
-                  <figure
-                    class="col-12 col-sm-6"
-                    itemprop="associatedMedia"
-                    itemscope
-                    itemtype="http://schema.org/ImageObject"
-                  >
-                    <a
-                      href="img/portfolio/portfolio-3.jpg"
-                      class="works-link"
-                      data-image="img/portfolio/portfolio-3.jpg"
-                      itemprop="contentUrl"
-                      data-size="900x1200"
-                    >
-                      <img
-                        src="img/portfolio/portfolio-3.jpg"
-                        class="works-image"
-                        itemprop="thumbnail"
-                        alt="Image description"
-                      />
-                    </a>
-                    <figcaption
-                      class="works-description"
-                      itemprop="caption description"
-                    >
-                      <h3>
-                        Just stylish brand
-                        <small>Fashion</small>
-                      </h3>
-                      <p>
-                        Mauris porttitor lobortis ligula, quis molestie lorem
-                        scelerisque eu. Morbi aliquam enim odio, a mollis ipsum
-                        tristique eu.
-                      </p>
-                    </figcaption>
-                  </figure>
-                  <!-- Works Gallery Single Item End -->
-
-                  <!-- Works Gallery Single Item Start -->
-                  <figure
-                    class="col-12 col-sm-6"
-                    itemprop="associatedMedia"
-                    itemscope
-                    itemtype="http://schema.org/ImageObject"
-                  >
-                    <a
-                      href="img/portfolio/portfolio-4.jpg"
-                      class="works-link"
-                      data-image="img/portfolio/portfolio-4.jpg"
-                      itemprop="contentUrl"
-                      data-size="900x1200"
-                    >
-                      <img
-                        src="img/portfolio/portfolio-4.jpg"
-                        class="works-image"
-                        itemprop="thumbnail"
-                        alt="Image description"
-                      />
-                      <div class="overlay"></div>
-                    </a>
-                    <figcaption
-                      class="works-description"
-                      itemprop="caption description"
-                    >
-                      <h3>
-                        Architecture website
-                        <small>Web Design</small>
-                      </h3>
-                      <p>
-                        Mauris porttitor lobortis ligula, quis molestie lorem
-                        scelerisque eu. Morbi aliquam enim odio, a mollis ipsum
-                        tristique eu.
-                      </p>
-                    </figcaption>
-                  </figure>
-                  <!-- Works Gallery Single Item End -->
-                </div>
-              </div>
-              <!-- Works Gallery End -->
+              <span class="sponsor-title">Powered By</span>
             </div>
+            <div class="sponsor-card"></div>
+            <div class="sponsor-card"></div>
+            <div class="sponsor-card"></div>
+            <div class="sponsor-card"></div>
+            <div class="sponsor-card"></div>
+            <div class="sponsor-card"></div>
           </div>
-          <!-- Portfolio Section Media End -->
+          <!-- sponsors section ends  -->
         </div>
       </div>
     </section>
