--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </li>
                 <li>
                   <a href="#" id="about-trigger" class="navigation__item">
-                    <span class="subtitle">Something new</span>
+                    <span class="subtitle">Learn More</span>
                     <span class="link">About us</span>
                   </a>
                 </li>
@@ -246,8 +246,8 @@
                 </li>
                 <li>
                   <a href="#" id="pastSponsor-trigger" class="navigation__item">
-                    <span class="subtitle">Our Past Sponsors</span>
-                    <span class="link">Past Sponsors</span>
+                    <span class="subtitle">Our Past</span>
+                    <span class="link">Sponsors</span>
                   </a>
                 </li>
                 <li>
@@ -825,12 +825,9 @@
               <!-- Section Content Block Title Start -->
               <div class="content-block">
                 <!-- <span class="subtitle">our Past Sponsors</span>  -->
-                <h2>Past Sponsor</h2>
+                <h2>Our Past Sponsors</h2>
                 <p class="section-text">
-                  Interested in sponsoring Effervescence'21 ?
-                  <br />
-                  Have a look at our Sponsorship Brochure
-                  <br />
+                  Interested in sponsoring Effervescence'21? Have a look at our Sponsorship Brochure!
                   <br />
                   <br />
                   <a
@@ -840,7 +837,7 @@
                   >
                     <span class="btn-border"></span>
                     <span class="btn-hover"></span>
-                    <span class="btn-caption">Here</span>
+                    <span class="btn-caption">Sponsorship Brochure</span>
                   </a>
                 </p>
               </div>
