PDF and Sponsors updated

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     />
 
     <!-- font awesome cdn ends  -->
-   </head>
+  </head>
 
   <body>
     <!-- Old Browsers Support Start -->
@@ -827,12 +827,13 @@
                 <!-- <span class="subtitle">our Past Sponsors</span>  -->
                 <h2>Our Past Sponsors</h2>
                 <p class="section-text">
-                  Interested in sponsoring Effervescence'21? Have a look at our Sponsorship Brochure!
+                  Interested in sponsoring Effervescence'21? Have a look at our
+                  Sponsorship Brochure!
                   <br />
                   <br />
                   <a
-                    href="./brochure/Marketing.pdf"
-                    id="explore-trigger"
+                    href="#"
+                    id="brochure-trigger"
                     class="btn btn-l btn-outline"
                   >
                     <span class="btn-border"></span>
@@ -854,8 +855,8 @@
             </div>
           </div>
           <!-- sponsors section starts  -->
-          
-          <div class="sponsors-container" >
+
+          <div class="sponsors-container">
             <div class="sponsor-card poweredBy">
               <img src="./img/sponsors/mtv.jpg" />
               <br />
@@ -871,91 +872,91 @@
               <span class="sponsor-title">Associate Partner</span>
             </div>
             <div class="sponsor-card">
-             <img src="./img/sponsors/bingo.png" />
+              <img src="./img/sponsors/bingo.png" />
               <br />
               <span class="sponsor-name">Bingo</span>
 
-              <span class="sponsor-title">Entertainment Partner</span> 
+              <span class="sponsor-title">Entertainment Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/rozdhan.png" />
               <br />
               <span class="sponsor-name">RozDhan</span>
 
-              <span class="sponsor-title">Official Infotainment Partner</span> 
+              <span class="sponsor-title">Official Infotainment Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/zebronics.png" />
               <br />
               <span class="sponsor-name">Zebronics</span>
 
-              <span class="sponsor-title">Audio Partner</span> 
+              <span class="sponsor-title">Audio Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/redfm.png" />
               <br />
               <span class="sponsor-name">RedFm</span>
 
-              <span class="sponsor-title">Radio Partner</span> 
+              <span class="sponsor-title">Radio Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/ankur.jpg" />
               <br />
               <span class="sponsor-name">Ankur Arora</span>
 
-              <span class="sponsor-title">Clothing Partner</span> 
+              <span class="sponsor-title">Clothing Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/honda.png" />
               <br />
               <span class="sponsor-name">Honda</span>
 
-              <span class="sponsor-title">Mobility Partner</span> 
+              <span class="sponsor-title">Mobility Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/amul.png" />
               <br />
               <span class="sponsor-name">Amul</span>
 
-              <span class="sponsor-title">Dairy Partner</span> 
+              <span class="sponsor-title">Dairy Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/ktm.jpg" />
               <br />
               <span class="sponsor-name">KTM</span>
 
-              <span class="sponsor-title">Driven By Partner</span> 
+              <span class="sponsor-title">Driven By Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/ease.png" />
               <br />
               <span class="sponsor-name">Ease My Trip</span>
 
-              <span class="sponsor-title">Official Travel Partner</span> 
+              <span class="sponsor-title">Official Travel Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/mood.png" />
               <br />
               <span class="sponsor-name">Mood Indigo</span>
 
-              <span class="sponsor-title">Talent Showcase Partner</span> 
+              <span class="sponsor-title">Talent Showcase Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/ht.png" />
               <br />
               <span class="sponsor-name">Hindustan Times</span>
 
-              <span class="sponsor-title">Official Media Partner</span> 
+              <span class="sponsor-title">Official Media Partner</span>
             </div>
             <div class="sponsor-card">
               <img src="./img/sponsors/axis.png" />
               <br />
               <span class="sponsor-name">Axis Bank</span>
 
-              <span class="sponsor-title">Banking Partner</span> 
+              <span class="sponsor-title">Banking Partner</span>
             </div>
-            
-             <div class="sponsor-card">
+
+            <div class="sponsor-card">
               <img src="./img/sponsors/spartan.png" />
               <br />
               <span class="sponsor-name">Spartan Poker</span>
@@ -1172,9 +1173,31 @@
 
               <span class="sponsor-title">Media Partner</span>
             </div>
+            <div class="sponsor-card">
+              <img src="./img/sponsors/C&C.jpg" />
+              <br />
+              <span class="sponsor-name">Chords & Co.</span>
 
+              <span class="sponsor-title"
+                >Associate for Clangour & Cadence</span
+              >
             </div>
-          </>
+            <div class="sponsor-card">
+              <img src="./img/sponsors/fundamakers.png" />
+              <br />
+              <span class="sponsor-name">FundaMakers</span>
+
+              <span class="sponsor-title">CAT Partner</span>
+            </div>
+            <div class="sponsor-card">
+              <img src="./img/sponsors/designboat.png" />
+              <br />
+              <span class="sponsor-name">Design Boat</span>
+
+              <span class="sponsor-title">Design for Hackathon </span>
+            </div>
+          </div>
+
           <!-- sponsors section ends  -->
         </div>
       </div>
@@ -1400,6 +1423,15 @@
       </div>
     </section>
     <!-- Contact Section End -->
+    <!-- Brochure Section Start  -->
+    <section id="brochure" class="content-section contact">
+      <div class="container-fluid p-0 fullheight">
+        <div class="brochure-container">
+          <iframe src="./brochure/Marketing.pdf"></iframe>
+        </div>
+      </div>
+    </section>
+    <!-- Brochure Section End  -->
 
     <!-- Custom HTML End -->
 
@@ -1484,7 +1516,7 @@
     <script src="js/libs.min.js"></script>
     <script src="js/gallery-init.js"></script>
     <script src="js/unio-custom.js"></script>
-     </body>
+  </body>
 
   <!-- Mirrored from mixdesign.club/themeforest/unio/index-countdown-full-video-youtube.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 03 Aug 2021 04:17:19 GMT -->
 </html>
