sponsor brochure update 2.0

--- a/index.html
+++ b/index.html
@@ -832,8 +832,7 @@
                   <br />
                   <br />
                   <a
-                    href="#"
-                    id="brochure-trigger"
+                    href="./brochure/Marketing.pdf"
                     class="btn btn-l btn-outline"
                   >
                     <span class="btn-border"></span>
@@ -1423,15 +1422,6 @@
       </div>
     </section>
     <!-- Contact Section End -->
-    <!-- Brochure Section Start  -->
-    <section id="brochure" class="content-section contact">
-      <div class="container-fluid p-0 fullheight">
-        <div class="brochure-container">
-          <iframe src="./brochure/Marketing.pdf"></iframe>
-        </div>
-      </div>
-    </section>
-    <!-- Brochure Section End  -->
 
     <!-- Custom HTML End -->
 
