responsiveness sponsor minor

--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                   <br />
                   <br />
                   <a
-                    href="./brochure/Marketing.pdf"
+                    href="./brochure/Brochure-Effe'21.pdf"
                     class="btn btn-l btn-outline"
                   >
                     <span class="btn-border"></span>
@@ -1028,7 +1028,7 @@
                   <br />
                   <span class="sponsor-name">Indian Overseas Bank</span>
 
-                  <span class="sponsor-title">Banking Partner</span>*
+                  <span class="sponsor-title">Banking Partner</span>
                 </div>
                 <div class="sponsor-card">
                   <img src="./img/sponsors/ed.jpg" />
@@ -1038,7 +1038,7 @@
                   <span class="sponsor-title">Media Partner</span>
                 </div>
                 <div class="sponsor-card">
-                  <img src="./img/sponsors/dancecentre.jpg" />
+                  <img class="big-logo" src="./img/sponsors/dancecentre.jpg" />
                   <br />
                   <span class="sponsor-name">Allahabad Dance Centre</span>
 
