logo link to home

--- a/index.html
+++ b/index.html
@@ -169,13 +169,15 @@
     <!-- Header Start -->
     <header class="header">
       <!-- Logo Start -->
-      <div class="logo">
-        <!-- Your Logo Here -->
-        <img
-          src="img/effe/images/logo.png"
-          alt="Effervescence'21 - The Cultural Fest of IIIT Allahabad"
-        />
-      </div>
+      <a href="#" id="home-trigger" class="navigation__item active-link">
+        <div class="logo">
+          <!-- Your Logo Here -->
+          <img
+            src="img/effe/images/logo.png"
+            alt="Effervescence'21 - The Cultural Fest of IIIT Allahabad"
+          />
+        </div>
+      </a>
       <!-- Logo End -->
 
       <!-- Menu Trigger Start -->
