logo press issue fixed

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <!-- Header Start -->
     <header class="header">
       <!-- Logo Start -->
-      <a href="#" id="home-trigger" class="navigation__item active-link">
+      <a href="#" id="logo-pressed" class="navigation__item active-link">
         <div class="logo">
           <!-- Your Logo Here -->
           <img
