--- a/index.html
+++ b/index.html
@@ -518,60 +518,37 @@
       <div class="container-fluid p-0 fullheight">
         <div class="row no-gutters fullheight">
           <!-- About Section Info Start -->
-          <div class="col-12 col-xl-6 content-section__info">
-            <div class="blocks-container">
+          <div class="col-12 col-xl-7 content-section__info about-us">
+            <div class="blocks-container about-us">
               <!-- Section Content Block Title Start -->
-              <div class="content-block">
-                <span class="subtitle">About Us</span>
-                <h2>Just awesome<br />template</h2>
-                <p class="section-text">
-                  I wonder if I've been changed in the night? Let me think. Was
-                  I the same when I got up this morning? I almost think I can
-                  remember feeling a little different. But if I'm not the same,
-                  the next question is 'Who in the world am I?' Ah, that's the
-                  great puzzle!
+              <div class="content-block about-us">
+                <span class="aboutUS">About Us</span>
+                
+                <p class="section-text para">
+                  IIIT A is one of the leading illustrious institutes all over India , countless talented individuals gain experiences & attain unprecedented professional crests in their expedition.<br><br>Effervescence is the once-a-year cultural epitome of IIIT Allahabad. It’s one of the most prodigious fests over colleges of North India. This carnival illuminates the essence and ethos of IIITA.<br><br>Foremost ,stage events of our festival are enkindled by famed people. Additionally, the assorted number of cultural events of belles-lettres, melody & theatricals embellishes the glowing glamour of the fest .
                 </p>
+                <br>
+                <a
+                    href="http://effe.org.in"
+                    class="btn btn-l btn-outline"
+                  >
+                    <span class="btn-border"></span>
+                    <span class="btn-hover"></span>
+                    <span class="btn-caption website20">Effervesence'20</span>
+                  </a>
               </div>
               <!-- Section Content Block Title End -->
 
-              <!-- Section Content Block Skillbars Start -->
-              <div class="content-block">
-                <!-- Skillbar single item -->
-                <div class="show-skillbar">
-                  <div class="skillbar" data-percent="96">
-                    <span class="skillbar-title">Design</span>
-                    <p class="skillbar-bar"></p>
-                    <span class="skill-bar-percent"></span>
-                  </div>
-                </div>
-                <!-- Skillbar single item -->
-                <div class="show-skillbar">
-                  <div class="skillbar" data-percent="84">
-                    <span class="skillbar-title">Branding</span>
-                    <p class="skillbar-bar"></p>
-                    <span class="skill-bar-percent"></span>
-                  </div>
-                </div>
-                <!-- Skillbar single item -->
-                <div class="show-skillbar">
-                  <div class="skillbar" data-percent="90">
-                    <span class="skillbar-title">Marketing</span>
-                    <p class="skillbar-bar"></p>
-                    <span class="skill-bar-percent"></span>
-                  </div>
-                </div>
-              </div>
-              <!-- Section Content Block Skillbars End -->
             </div>
           </div>
           <!-- About Section Info End -->
 
           <!-- About Section Media Start -->
-          <div class="col-12 col-xl-6 content-section__media">
+          <div class="col-12 col-xl-5 content-section__media">
             <!-- <div class="content-section__darkscreen"></div> -->
-            <div class="media-container">
+            <div class="media-container concert">
               <!-- About Image Start -->
-              <div class="image about-image"></div>
+              <img src="img/effe/images/capture3.gif">
               <!-- About Image End -->
             </div>
           </div>
